--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WWW Redirect</title>
+    <meta http-equiv="Refresh" content="1; url=https://www.nexlink.website">
+    <style>
+        p{font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"};
+    </style>
 </head>
 <body>
-    
+    <p>If you are not redirected automatically, please click <a href="https://www.nexlink.website">here</a>.</p>
 </body>
 </html>
