Remove icon URL

--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en-US">
 <head>
     <title>WWW Redirect</title>
-    <meta http-equiv="Refresh" content="0; url=https://www.nexlink.website">
+    <!-- <meta http-equiv="Refresh" content="0; url=https://www.nexlink.website"> -->
     <style>
         p{font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"}
     </style>
 </head>
 <body>
     <p>If you are not redirected automatically, please click <a href="https://www.nexlink.website">here</a>.</p>
-    <br><img width=128 height=45 alt="A W3C validated icon" src="/public/W3C-Validated-HTML5-32px.png">
 </body>
 </html>
