--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
     <title>Redirecting...</title>
-    <!-- <meta http-equiv="Refresh" content="0; url=https://www.nexlink.website"> -->
+    <meta http-equiv="Refresh" content="0; url=https://www.nexlink.website">
     <style>
         p{font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"}
     </style>
