--- a/index.html
+++ b/index.html
@@ -2,12 +2,23 @@
 <html lang="en-US">
 <head>
     <title>Redirecting...</title>
-    <meta http-equiv="Refresh" content="0; url=https://www.nexlink.website">
+    <meta http-equiv="Refresh" content="5; url=https://www.nexlink.website">
     <style>
         p{font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"}
     </style>
 </head>
 <body>
-    <p>If you are not redirected automatically, please click <a href="https://www.nexlink.website">here</a>.</p>
+    <p>If you are not redirected within 5 seconds, please click <a href="https://www.nexlink.website">here</a>.</p>
+
+    <script>
+        if (navigator.language == "nb-NO")
+        {
+            window.location.href = "https://nexlink.website/no.html";
+        }
+        else
+        {
+            window.location.href = "https://nexlink.website/index.html";
+        }
+    </script>
 </body>
 </html>
