Change 404 wording & fix issue

--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h2>Not Found</h1>
-    <p>Your requested resource was not found on this server. If you are not automatically redirected to the main website, you can click <a href="https://www.nexlink.website/">here</a> to return to the home page.</p>
+    <p>Your requested resource was not found on this server. However, it may be available for you at another server. If you are not automatically redirected, you can click <a href="https://www.nexlink.website/">here</a> to return to the home page.</p>
     
     <script>
         const pathName = window.location.pathname;
