--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <script>
         if (navigator.language == "nb-NO")
         {
-            window.location.href = "https://nexlink.website/no.html";
+            window.location.href = "https://www.nexlink.website/no.html";
         }
         else
         {
-            window.location.href = "https://nexlink.website/index.html";
+            window.location.href = "https://www.nexlink.website/index.html";
         }
     </script>
 </body>
