--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
 <body>
     <noscript>
         <h2>Not Found</h1>
-        <p>Your requested resource was not found on this server. However, it may be available for you at another server. If you are not automatically redirected in 5 seconds, you can click <a href="https://www.nexlink.website/">here</a> to return to the home page.</p>    
+        <p>Your requested resource was not found on this server. If you are not automatically redirected in 5 seconds, you can click <a href="https://www.nexlink.website/">here</a> to return to the home page.</p>    
     </noscript>
 
     <script>
